# Hub-VAR

./: CMakeLists.txt  benchmark_altervative_using_hublabeling_admissible.cpp  compute_landmark.cpp  construct.cpp  convert_osm.cpp  convert_osm_with_speed.cpp  gen_cpd.sh  preprocessing.sh  preprocessing_time.sh
dataset/NY/: NY_time.first
include/routingkit/: ch_dijkstra_hl.h  ch_dijkstra_single.h  contraction_hierarchy.h  dijkstra.h  geo_dist.h  id_queue.h  my_timer.h  ori_dijkstra.h  osm_simple.h  shortest_dijkstra_single.h
src/: DCPD.cpp  DCPD.h  binary_search.h  compute_contraction_hierarchy.cpp  construction.h  contraction_hierarchy.cpp  convert_road_dimacs_coordinates.cpp  convert_road_dimacs_graph.cpp  convert_road_dimacs_graph_with_speed.cpp  coverage_ordering.h  coverage_ordering_compress.h  graph.h  graph_search.h  landmark.h  modified_dijkstra.h  my_timer.cpp  my_timer.h  ordering.h  osm_simple.cpp  paras.h  performance_metrics.h  range.h  time_util.h  tree_node.h  vec_io.h
